updated publications and cv

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #  url: /portfolio/
         
   - title: "CV"
-    url: /files/NikithaRao_CV_January2021.pdf
+    url: /files/NikithaRao_CV.pdf
   
   - title: "Academic Blog Posts"
     url: /year-archive-academic/
