updated side bar details

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Nikitha Rao"
 title_separator          : "-"
 name                     : &name "Nikitha Rao"
-description              : &description "Research Fellow at Microsoft Research Lab - India"
+description              : &description "PhD Student at Carnegie Mellon University"
 url                      : https://raonikitha.github.io # http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "RaoNikitha/raonikitha.github.io"
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Nikitha Rao"
   avatar           : "profile.png"
-  bio              : "Research Fellow at Microsoft Research Lab - India"
-  location         : "Bangalore, India"
+  bio              : "PhD Student at Carnegie Mellon University"
+  location         : "Pittsburgh, USA"
   employer         : #"Microsoft Research Lab - India"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=33De4NEAAAAJ&hl=en" #"http://yourfullgooglescholarurl.com"
