updated content and publications page format

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : #"Microsoft Research Lab - India"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=33De4NEAAAAJ&hl=en" #"http://yourfullgooglescholarurl.com"
-  email            : "t-nirao@microsoft.com"
+  email            : "nikitharao@cmu.edu"
   researchgate     : "https://www.researchgate.net/profile/Nikitha_Rao2"
   uri              : 
   bitbucket        :
